...
        app:chipSpacingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/anger_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anger_text"
            android:textColor="@color/anger"
            android:textStyle="bold"
            app:checkedIcon="@drawable/anger"
...
            app:textEndPadding="10dp"
            app:textStartPadding="10dp"
            tools:fontFamily="@font/roboto_medium"
            android:checkable="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/sad_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sad_text"
            android:textColor="@color/sad"
            android:textStyle="bold"
            app:checkedIcon="@drawable/sad"
...
            app:textEndPadding="10dp"
            app:textStartPadding="10dp"
            tools:fontFamily="@font/roboto_medium"
            android:checkable="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/disgust_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disgust_text"
            android:textColor="@color/disgust"
            android:textStyle="bold"
            app:checkedIcon="@drawable/disgust"
...
            app:textEndPadding="10dp"
            app:textStartPadding="10dp"
            tools:fontFamily="@font/roboto_medium"
            android:checkable="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/happy_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happy_text"
            android:textColor="@color/happy"
            android:textStyle="bold"
            app:checkedIcon="@drawable/happy"
...
        app:counterEnabled="true"
        app:counterMaxLength="200"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/blue_nav_bar"> <!-- Changes bottom line color -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reason_why_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reason_why_hint_text"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:background="#FFFFFFFF"/>
...
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAlone"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alone_text"
            android:textColor="@color/SocialSituationTextColor"
            app:checkedIcon="@drawable/ic_check"
...
            app:chipCornerRadius="20dp"
            tools:fontFamily="@font/roboto_medium" />

    </com.google.android.material.chip.ChipGroup>

    <Switch
        android:id="@+id/privacy_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="   Make Public" />

    <!-- Image Buttons Row -->
    <LinearLayout
...
            android:text="@string/delete"
            android:elevation="4dp"
            android:textColor="@color/white"
            android:minWidth="0dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/SubmitPostButton"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

        <Button
            android:id="@+id/SubmitPostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
