<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    tools:context=".Fragments.SignupFragment"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_height="480dp"
        android:layout_centerHorizontal="true"
        android:translationY="-200dp"
        app:srcCompat="@drawable/oval" />

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/signup_edit_username"
        android:layout_marginTop="-170dp"
        android:layout_below="@id/imageView"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:layout_marginBottom="20dp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/signup_edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/create_account_text"
        android:background="@drawable/ic_edittext"
        android:fontFamily="@font/roboto_medium"
        android:paddingHorizontal="20dp"
        android:autofillHints="username"
        android:inputType="text"
        android:hint="@string/username_cap"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/signup_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_edit_username"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_edittext"
        android:paddingHorizontal="20dp"
        android:fontFamily="@font/roboto_medium"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/email_cap"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/signup_edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_edit_email"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/ic_edittext"
        android:fontFamily="@font/roboto_medium"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/password_cap"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/signup_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_edit_password"
        android:backgroundTint="#00FFFFFF"
        android:layout_alignStart="@id/signup_edit_username"
        android:text="@string/register_login"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_nav_bar"
        android:fontFamily="@font/roboto_medium"
        android:layout_below="@id/signup_login"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:padding="15dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
