...
        android:textColor="@color/gray"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/details_emotion_and_social_situation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:text="Happy 😊 with 2 others"
        android:textSize="16sp"
...
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_event_details" />

    <TextView
        android:id="@+id/details_reason_why"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reason_why"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
